fix(ToastProvider): max-width and overflow

--- a/src/components/ToastProvider/ToastProvider.scss
+++ b/src/components/ToastProvider/ToastProvider.scss
@@ -26,13 +26,13 @@
             justify-content: space-between;
             gap: 15px;
             height: 50px;
+            max-width: 90%;
             padding: 0 20px;
             margin-bottom: 20px;
             background-color: $primary-accent-color;
             box-shadow: 0px 5px 10px 0 rgba(0, 0, 0, 0.25);
             cursor: pointer;
             user-select: none;
-            white-space: nowrap;
 
             &.error {
                 color: white;
@@ -63,12 +63,14 @@
 
             .inner {
                 height: 100%;
+                width: 100%;
                 display: flex;
                 align-items: center;
                 gap: 10px;
                 font-size: 15px;
                 font-weight: bold;
                 color: black;
+                overflow: hidden;
 
                 .badge {
                     flex: 0 0 auto;
